# noc-ai

./: .gitignore  LICENSE  main.py  pyproject.toml
.github/workflows/: tests.yml
noc_ai/: llm.py
noc_ai/actions/call_agent/: app.py
noc_ai/actions/calls/: app.py
noc_ai/actions/ticket_agent/: app.py
noc_ai/actions/tickets/: app.py
noc_ai/lookups/elastic_stack/: agent.py
noc_ai/ticket_agent/: ticket_agent.py
src/call_agent/: __init__.py
src/ticket_agent/: __init__.py
tests/: test_call_agent.py  test_calls.py  test_ticket_agent.py  test_tickets.py
tests/elasticsearch/: test_es.py
tests/llm/: test_llm.py
