[project]
name = "noc-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.15",
    "langchain-openai>=0.3.1",
    "pydantic>=2.10.5",
]

[dependency-groups]
dev = [
    "mdformat-ruff>=0.1.3",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 80
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-annotations
    "ANN",
    # flake8-type-checking
    "TC",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 40
